# ruchle

./: Cargo.toml  README.md  pyproject.toml
python/ruchle/: __init__.py  main.py
python/ruchle/data/: words_en.txt  words_es.txt
src/: lib.rs
